--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="//at.alicdn.com/t/font_2101774_rh73yv5tat.js"></script>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_3028210_ujpjpm19kuo.css" />
     <title>vue-element-layout-template</title>
   </head>
   <body>
